      using function \code{me} in the model formulae.
      \item Fit multi-membership models using function
      \code{mm} in grouping terms.
      \item Add families \code{exgaussian}
      (exponentially modified Gaussian distribution) 
      and \code{wiener} (Wiener diffusion model distribution)
      specifically suited to handle for response times.
      \item Add the methods \code{log_posterior},
      \code{nuts_params}, \code{rhat}, and \code{neff_ratio}
      for \code{brmsfit} objects to conveniently access
      quantities used to diagnose sampling behavior.
      \item Combine chains in method \code{as.mcmc} using
      argument \code{combine_chains}.
      \item Estimate the auxiliary parameter
      \code{sigma} in models with known standard errors of
      the response by setting argument \code{sigma} to 
      \code{TRUE} in addition function \code{se}.
      \item Allow visualizing two-dimensional smooths
      with the \code{marginal_smooths} method.
    }
  }
  \subsection{OTHER CHANGES}{
    \itemize{
      \item Require argument \code{data} to be explicitely 
      specified in all user facing functions.
      \item Refactor the \code{stanplot} method
      to use \pkg{bayesplot} on the backend.
      \item Use the \pkg{bayesplot} theme as the default
      in all plotting functions.
      \item Add the abbreviations \code{mo} and \code{cs}
      to specify monotonic and category specific effects
      respectively.
      \item Rename generated variables in the data.frames 
      returned by \code{marginal_effects} to avoid potential
      naming conflicts.
      \item Remove the deprecated \code{partial} argument.
    }
  }
}

\section{CHANGES IN VERSION 1.2.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Add the new family \code{hurdle_lognormal}
      specifically suited for zero-inflated continuous responses.
      \item Introduce the \code{pp_check} method to perform 
      various posterior predictive checks