@@ -91,11 +91,10 @@
 #'   on the right-hand side of the model formula.
 #'   
 #'   A special shrinkage prior to be applied on population-level effects 
-#'   is the horseshoe prior.
+#'   is the horseshoe prior (Carvalho et al., 2009).
 #'   It is symmetric around zero with fat tails and an infinitely large spike
 #'   at zero. This makes it ideal for sparse models that have 
 #'   many regression coefficients, although only a minority of them is non-zero. 
-#'   For more details see Carvalho et al. (2009).
 #'   The horseshoe prior can be applied on all population-level effects at once 
 #'   (excluding the intercept) by using \code{set_prior("horseshoe(1)")}.
 #'   The \code{1} implies that the student-t prior of the local shrinkage 
@@ -111,11 +110,31 @@
 #'   of the horseshoe prior, for instance \code{horseshoe(1, scale_global = 0.5)}.
 #'   For recommendations how to properly set the global scale see 
 #'   Piironen and Vehtari (2016).
+#'   To make sure that shrinkage can equally affect all coefficients, 
+#'   predictors should be one the same scale. 
 #'   Generally, models with horseshoe priors a more likely than other models
 #'   to have divergent transitions so that increasing \code{adapt_delta} 
 #'   from \code{0.8} to values closer to \code{1} will often be necessary.
 #'   See the documentation of \code{\link[brms:brm]{brm}} for instructions
 #'   on how to increase \code{adapt_delta}. \cr
+#'   
+#'   Another shrinkage prior is the so-called \emph{lasso} prior.
+#'   It is the Bayesian equivalent to the LASSO method for performing
+#'   variable selection (Park & Casella, 2008).
+#'   With this prior, independent Laplace (i.e., double exponential) priors 
+#'   are placed on the population-level effects. 
+#'   The scale of the Laplace priors depends on a tuning parameter
+#'   that controls the amount of shrinkage. In \pkg{brms}, the inverse
+#'   of the tuning parameter is used so that smaller values imply
+#'   more shrinkage. The inverse tuning parameter has a chi-square distribution
+#'   and with degrees of freedom controlled via argument \code{df}
+#'   of function \code{lasso} (defaults to \code{1}). For instance,
+#'   one can specify a lasso prior using \code{set_prior("lasso(1)")}.
+#'   To make sure that shrinkage can equally affect all coefficients, 
+#'   predictors should be one the same scale.
+#'   If you do not want to standarized all variables,
+#'   you can adjust the general scale of the lasso prior via argument
+#'   \code{scale}, for instance, \code{lasso(1, scale = 10)}.
 #'   
 #'   In non-linear models, population-level effects are defined separately 
 #'   for each non-linear parameter. Accordingly, it is necessary to specify
@@ -282,10 +301,12 @@
 #' Gelman A. (2006). Prior distributions for variance parameters in hierarchical models.
 #'    Bayesian analysis, 1(3), 515 -- 534.
 #'    
+#' Park, T., & Casella, G. (2008). The Bayesian Lasso. Journal of the American 
+#'    Statistical Association, 103(482), 681-686.
+#'    
 #' Piironen J. & Vehtari A. (2016). On the Hyperprior Choice for the Global 
 #'    Shrinkage Parameter in the Horseshoe Prior. 
 #'    \url{https://arxiv.org/pdf/1610.05559v1.pdf}
-#'   
 #' 
 #' @examples
 #' ## check which parameters can have priors
@@ -306,10 +327,15 @@
 #'               threshold = "equidistant",
 #'               prior = prior)
 #'               
-#' ## use horseshoe priors to model sparsity in population-level effects parameters
+#' ## use the horseshoe prior to model sparsity in population-level effects
 #' make_stancode(count ~ log_Age_c + log_Base4_c * Trt_c,
 #'               data = epilepsy, family = poisson(),
 #'               prior = set_prior("horseshoe(3)"))
+#'               
+#' ## alternatively use the lasso prior
+#' make_stancode(count ~ log_Age_c + log_Base4_c * Trt_c,
+#'               data = epilepsy, family = poisson(),
+#'               prior = set_prior("lasso(1)"))
 #'               
 #' ## use alias functions
 #' (prior1 <- prior_string("cauchy(0, 1)", class = "sd"))
@@ -953,25 +979,35 @@ handle_special_priors <- function(prior, has_specef = FALSE) {
   #   a possibly amended prior.frame with additional attributes
   prior_attr <- list()
   b_index <- which(prior$class == "b" & !nchar(prior$coef))
-  if (length(b_index) && grepl("^horseshoe\\(", prior$prior[b_index])) {
-    # horseshoe prior for fixed effects parameters
-    if (any(nchar(prior$nlpar))) {
-      stop2("Horseshoe priors are not yet allowed in non-linear models.")
+  if (length(b_index)) {
+    b_prior <- prior$prior[b_index]
+    if (any(grepl("^(horseshoe|lasso)\\(", b_prior))) {
+      # horseshoe prior for fixed effects parameters
+      if (any(nchar(prior$nlpar))) {
+        stop2("Horseshoe or lasso priors are not yet allowed ", 
+              "in non-linear models.")
+      }
+      if (has_specef) {
+        stop2("Horseshoe or lasso priors are not yet allowed ", 
+              "in models with monotonic or category specific effects.")
+      }
+      b_coef_indices <- which(prior$class == "b" & nchar(prior$coef) &
+                              prior$coef != "Intercept")
+      if (any(nchar(prior$prior[b_coef_indices]))) {
+        stop2("Defining priors for single population-level parameters",
+              "is not allowed when using horseshoe or lasso priors",
+              "(except for the Intercept).")
+      }
+      if (grepl("^horseshoe\\(", b_prior)) {
+        hs <- eval2(b_prior)
+        prior_attr[c("hs_df", "hs_scale_global")] <- hs[c("df", "scale_global")]
+        prior$prior[b_index] <- hs$prior
+      } else if (grepl("^lasso\\(", b_prior)) {
+        lasso <- eval2(b_prior)
+        prior_attr[c("lasso_df", "lasso_scale")] <- lasso[c("df", "scale")]
+        prior$prior[b_index] <- lasso$prior
+      }
     }
-    if (has_specef) {
-      stop2("Horseshoe priors are not yet allowed in models with ", 
-            "monotonic or category specific effects.")
-    }
-    b_coef_indices <- which(prior$class == "b" & nchar(prior$coef) &
-                            prior$coef != "Intercept")
-    if (any(nchar(prior$prior[b_coef_indices]))) {
-      stop2("Defining priors for single population-level parameters",
-            "is not allowed when using the horseshoe prior",
-            "(except for the Intercept).")
-    }
-    hs <- eval2(prior$prior[b_index])
-    prior_attr[c("hs_df", "hs_scale_global")] <- hs[c("df", "scale_global")]
-    prior$prior[b_index] <- hs$prior
   }
   # expand lkj correlation prior to full name
   prior$prior <- sub("^(lkj\\(|lkj_corr\\()", "lkj_corr_cholesky(", prior$prior)
@@ -1072,8 +1108,8 @@ horseshoe <- function(df = 1, scale_global = 1) {
   # Args:
   #   df: degrees of freedom of the local parameters
   #   scale_global: scale of the global cauchy prior
-  df <- as.numeric(df)
-  scale_global <- as.numeric(scale_global)
+  df <- round(as.numeric(df)[1], 5)
+  scale_global <- round(as.numeric(scale_global)[1], 5)
   if (!isTRUE(df > 0)) {
     stop2("Invalid horseshoe prior: Degrees of freedom of ", 
           "the local priors must be a single positive number.")
@@ -1082,5 +1118,25 @@ horseshoe <- function(df = 1, scale_global = 1) {
     stop2("Invalid horseshoe prior: Scale of the global ", 
           "prior must be a single positive number.")
   }
-  nlist(prior = "normal(0, hs_local * hs_global)", df, scale_global)
+  prior <- "normal(0, hs_local * hs_global)"
+  nlist(prior, df, scale_global)
+}
+
+lasso <- function(df = 1, scale = 1) {
+  # validate input for lasso prior
+  # Args:
+  #   df: degrees of freedom of the chi-square distribution 
+  #       of inv_lambda
+  df <- round(as.numeric(df)[1], 5)
+  scale <- round(as.numeric(scale)[1], 5)
+  if (!isTRUE(df > 0)) {
+    stop2("Invalid lasso prior: Degrees of freedom of the shrinkage ", 
+          "parameter prior must be a single positive number.")
+  }
+  if (!isTRUE(scale > 0)) {
+    stop2("Invalid lasso prior: Scale of the Laplace ", 
+          "priors must be a single positive number.")
+  }
+  prior <- paste0("double_exponential(0, ", scale, " * lasso_inv_lambda)")
+  nlist(prior, df, scale)
 }
